--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
             <artifactId>webjars-locator</artifactId>
             <version>0.40</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.4.6</version>
+        </dependency>
 
 
     </dependencies>
