--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-server.port=8081
+server.port=8080
 # ===============================
 # = LOGGING
 # ===============================
@@ -13,7 +13,7 @@ server.port=8081
 
 
 # Connection url for the database "Local MySQL"
-spring.datasource.url = jdbc:mysql://localhost:3306/shipping?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Europe/Berlin
+spring.datasource.url = jdbc:mysql://localhost:3306/mvc?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Europe/Berlin
 
 # Username and password
 spring.datasource.username = root
